Disable test in jdk17 and up